compiler/testData/diagnostics/tests/typealias/localTypeAliasModifiers.kt
// !DIAGNOSTICS: -UNUSED_VARIABLE -UNUSED_PARAMETER -TOPLEVEL_TYPEALIASES_ONLY

fun outer() {
    <!WRONG_MODIFIER_TARGET!>companion<!> typealias TestLocal = Any
}